# telegram-huggingface-daily-papers-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.md.bak  README.zh-CN.md  cache.py  config.py  docker-bake.hcl  docker-build-help.fish  docker-compose.yml  hf.py  main.py  pyproject.toml  quickstart.fish  start.fish  storage.py  test_cache.json
.github/workflows/: docker-build.yml  docker-publish.yml
docs/: AI_SUMMARIZATION.md  BADGES.md  CACHE_STORAGE.md  DOCKER.md  DOCKER_BUILD_SUMMARY.md  FILESYSTEM_STORAGE.md  FILESYSTEM_STORAGE_CHANGELOG.md  GITHUB_ACTIONS.md  GITHUB_STATS.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_V2_FIX.md  MESSAGE_LENGTH_LIMIT.md  PROJECT_SUMMARY.md  README.md  STORAGE_CONFIG_UPDATE.md  TELEGRAM_CHANNEL_SETUP.md  USAGE.md
tests/: README.md  debug_html.py  debug_upvote.html  debug_upvotes.py  test.fish  test_arxiv.py  test_cache_storage.py  test_docker_bake.fish  test_fs_storage.py  test_github_stats.py  verify_data.py
